chore: fix dots alignment on roadmap where there is more than one line

--- a/src/shared/components/blocks/roadmap/Roadmap.module.css
+++ b/src/shared/components/blocks/roadmap/Roadmap.module.css
@@ -46,6 +46,7 @@
                 width: var(--right-width);
                 display: flex;
                 justify-content: space-between;
+                align-items: center;
 
                 & .bodyLabel {
                     margin-left: calc(12px + 14px);
